# EasyNetwork

./: .bandit.yml  .bumpversion.cfg  .bumpversion.toml  .devtools.cfg  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.rst  DEVELOPMENT.md  LICENSE  README.md  codecov.yml  pdm.toml  pylock.toml  pyproject.toml  pytest-benchmark.ini  tox.ini
.github/: codecov.yml  dependabot.yml  release.yml
.github/actions/: cache.conf  pdm.conf  requirements-tox.txt
.github/actions/freebsd-vm/: action.yml
.github/actions/netbsd-vm/: action.yml
.github/actions/openbsd-vm/: action.yml
.github/actions/setup-tox/: action.yml
.github/scripts/: rewrite_bumpversion_cfg.py
.github/workflows/: build.yml  cache.yml  changelog.yml  lint.yml  prepare-release.yml  release.yml  test.yml
benchmark/: build_benchmark_image  datagram_echoclient.py  run_benchmark  stream_echoclient.py  tcp_echoclient.py  tcp_echoserver.py  udp_echoclient.py  udp_echoserver.py
benchmark/certs/: README.md
benchmark/servers/: asyncio_tcp_echoserver.py  asyncio_udp_echoserver.py  easynetwork_tcp_echoserver.py  easynetwork_udp_echoserver.py  requirements.txt
benchmark/tool/: client.py
benchmark_server/: .dockerignore  .gitignore  .rustfmt.toml  Cargo.toml  Dockerfile  Dockerfile.freethreaded  README.md  build_benchmark_image  datagram_echoclient.py  generate_html_report.py  run_benchmark  stream_echoclient.py
benchmark_server/servers/: asyncio_tcp_echoserver.py  asyncio_udp_echoserver.py  asyncio_unix_datagram_echoserver.py  asyncio_unix_stream_echoserver.py  easynetwork_tcp_echoserver.py  easynetwork_udp_echoserver.py  easynetwork_unix_datagram_echoserver.py  easynetwork_unix_stream_echoserver.py  requirements.txt  test_selector_datagram_server.py  test_selector_stream_server.py  trio_tcp_echoserver.py  trio_udp_echoserver.py  trio_unix_datagram_echoserver.py  trio_unix_stream_echoserver.py
benchmark_server/src/: datagram.rs  lib.rs  report.rs  stream.rs
benchmark_server/src/datagram_echoclient/: main.rs
benchmark_server/src/stream_echoclient/: client.rs  main.rs
benchmark_server/tool/: client.py
changelog.d/: 448.deps.rst  449.doc.rst  450.packaging.rst  456.doc.rst  457.changed.rst  460.packaging.rst  461.removed.rst  462.added.1.rst  462.added.2.rst  462.added.rst  462.removed.rst
docs/: .gitignore
docs/source/: changelog.rst  conf.py  glossary.rst  index.rst
docs/source/_extensions/: sphinx_easynetwork.py
docs/source/_include/: link-labels.rst  see-also-optional-dependencies.rst  sync-async-variants.rst
docs/source/alternatives/: index.rst
docs/source/api/: api_async.rst  api_sync.rst  converter.rst  exceptions.rst  index.rst  protocol.rst  serializers.rst  tools.rst  typevars.rst  warnings.rst
docs/source/howto/: index.rst  protocols.rst  serializers.rst  tcp_clients.rst  tcp_servers.rst  udp_clients.rst  udp_servers.rst
docs/source/quickstart/: index.rst  install.rst  overview.rst
docs/source/tutorial/: index.rst
docs/source/tutorials/: basic.rst  echo_client_server_tcp.rst  echo_client_server_udp.rst  ftp_server.rst  index.rst  udp_endpoint.rst
examples/: README.md
examples/advanced/: README.md
examples/basic/: README.md
examples/basic/001-tcp-echo-client-server/: server.py
examples/basic/002-tcp-echo-client-server-asyncio/: server.py
examples/basic/tcp-echo-client-server/: client.py  server.py
examples/basic/tcp-echo-client-server-asyncio/: client.py  server.py
micro_benchmarks/: conftest.py
micro_benchmarks/serializers/: bench_cbor.py  bench_json.py  bench_line.py  bench_msgpack.py  bench_pickle.py  conftest.py  groups.py
micro_benchmarks/serializers/samples/: data.json  data_10kb.json
requirements/: requirements-test.in
src/easynetwork/: __init__.py  _typevars.py  client.py  converter.py  exceptions.py  protocol.py  warnings.py
src/easynetwork/_utils/: __init__.py  abc.py  itertools.py
src/easynetwork/api_async/: __init__.py
src/easynetwork/api_sync/: __init__.py
src/easynetwork/async_api/: __init__.py  backend.py
src/easynetwork/async_def/: backend.py
src/easynetwork/asyncio/: backend.py
src/easynetwork/client/: __init__.py  abc.py  exceptions.py  tcp.py  udp.py
src/easynetwork/clients/: __init__.py  _base.py  _iter.py  abc.py  async_tcp.py  async_udp.py  async_unix_datagram.py  async_unix_stream.py  tcp.py  udp.py  unix_datagram.py  unix_stream.py
src/easynetwork/lowlevel/: __init__.py  _asyncgen.py  _errno.py  _final.py  _lock.py  _stream.py  _unix_utils.py  _utils.py  _wakeup_socketpair.py  constants.py  futures.py  request_handler.py  socket.py  typed_attr.py
src/easynetwork/protocol/: __init__.py  abc.py  composite.py  exceptions.py  json.py  pickle.py  struct.py
src/easynetwork/serializers/: __init__.py  _typevars.py  abc.py  base_stream.py  cbor.py  composite.py  exceptions.py  json.py  line.py  msgpack.py  pickle.py  struct.py  tools.py
src/easynetwork_asyncio/: __init__.py  _utils.py  backend.py  datagram.py  runner.py  server.py  socket.py  stream.py  tasks.py  threads.py
tests/: __init__.py  _utils.py  conftest.py  import_utils.py  test_import.py  test_tcp_client.py  test_tcp_server.py  test_udp_client.py  test_udp_server.py  tools.py
tests/fixtures/: socket.py  trio.py
tests/functional_test/: conftest.py  test_tcp_client.py
tests/other_test/: test_import.py  test_project_metadata.py  test_pyproject.py
tests/pytest_plugins/: async_finalizer.py  asyncio_event_loop.py  auto_markers.py  extra_features.py  flaky_tests.py  runtest_call.py  session_exit_code.py  ssl_module.py  unix_sockets.py  xdist_for_vscode.py
tests/scripts/: async_backend.py  async_client_test.py  async_server_test.py  server_test.py  threaded_client_test.py  threaded_server_test.py
tests/test_protocol/: base.py  test_compressor.py  test_json.py
tests/test_serializers/: base.py  test_cbor.py  test_compressor.py  test_json.py
tests/test_tools/: test_socket.py
tests/unit_test/: _utils.py  base.py  conftest.py  test_converter.py  test_protocol.py
tools/: update-changelog.sh
(+595 files in other folders)
